--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <svg id="graph" class="graph"></svg>
+<!--        <div style="    position: absolute;
+    background-color: grey;
+    width: 1024px;
+    opacity: 0.2;
+    height: 1024px;
+    transform: rotateX(60deg) rotateZ(-45deg);
+    top: 33vh;
+    left: 500px;"></div>-->
+    <svg id="graph" class="graph" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
+
 
     <aside id="graph-controls">
         <button id="label-display-toggle">Toggle Label Display</button>
