--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     transform: rotateX(60deg) rotateZ(-45deg);
     top: 33vh;
     left: 500px;"></div>-->
-    <svg id="graph" class="graph" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
+    <svg id="graph" class="graph" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1500 1000" ></svg>
 
 
     <aside id="graph-controls">
